<resources>
    <string name="app_name">My Application</string>
    <string name="horticultural_logo">horticultural farming</string>
    <string name="crop_details">Crop_details</string>
    <string name="weather_updates">Weather Updates</string>
    <string name="discussion_forum">Discussion Forum</string>
    <string name="contact_us">Contact Us</string>
    <string name="image_analysis">Image Analysis</string>
    <string name="about_us">About Us</string>
    <string name="appname">Horticultural Farming</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enterpassword">Enter Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_username">Enter Username</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="txt_sign_up">Sign up</string>
    <string name="log_in_btn">LOG IN</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email...</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="image_button">Image Button</string>
    <string name="dummy_email">emailaddress@gmail.com</string>
    <string name="enter_phone_number">Enter Phone Number...</string>
    <string name="submit">Submit</string>
    <string name="email_address">Email Address</string>
    <string name="all_posts">All posts</string>
    <string name="market_posts">Market posts</string>
    <string name="trending_posts">Trending Posts</string>
    <string name="go_back_button">GO BACK BUTTON</string>
    <string name="new_post">New post</string>
    <string name="post_image">Post Image</string>
    <string name="add_caption">Add caption</string>
    <string name="add_post">Add_post</string>
    <string name="comments_appear_here">comments appear here....</string>
    <string name="date_of_the_post">Date of the post</string>
    <string name="usename">Username</string>
    <string name="_0_likes">0 likes</string>
    <string name="_0_comments">0 comments</string>
    <string name="apples">Apples</string>
    <string name="water_melon">Water Melon</string>
    <string name="blue_berries">Blue Berries</string>
    <string name="grapes">Grapes</string>
    <string name="pineapples">PineApples</string>
    <string name="straw_berry">Straw Berry</string>
    <string name="comments">comments</string>
    <string name="brocolli">Brocolli</string>
    <string name="cucumber">Cucumber</string>
    <string name="onions">Onions</string>
    <string name="lettuce">Lettuce</string>
    <string name="pest_and_image_identification">Pest and Image Identification</string>
    <string name="roses">Roses</string>
    <string name="sun_flower">Sun Flower</string>
    <string name="tuberous_benogias">Tuberous Benogias</string>
    <string name="about_app"><b>About Application</b>\n\n
The horticultural implex farming application features tools to identify pests, managing your crops and getting weather updates of that particular location.\n
It can help you make decisions that will improve the health of your crops and improve your yields and connect with experts who can assist you with the better solutions about your crops. \n
The horticultural implex is designed and developed by Catherine Maina and every effort was made to help farmers on how to grow and take care of their horticultural crops. \n
<b>Modules inside the HORTICULTURAL implex</b>\n
Crop details- this module covers all information about growing horticultural crops which include flowers, vegetables and fruits the module gives details on when to plant, weeding, applying fertilizers, harvesting and pests and diseases. \n
Discussion Forum – this module provides a forum where farmers can post anything and other farmers can comment about the post. It is divided into three parts which are market posts, all posts and trending posts.\n
Contact us – this module provides a real time chatting application where farmers and experts can chat with each other as well as a chat bot which can answer questions to help farmers make decisions.\n
Plant and pest identification – this module farmers upload an image and identify the crop and give the possible pest that have affected your crops. \n

<b>For more information</b>\n\n
cateiannjeri@gmail.com
</string>
    <string name="privacy_policy"><b>Privacy Policy</b>\n
Catherine Maina built the Horticultural farming app as an Open Source app. This SERVICE is provided by Catherine Maina at no cost and is intended for use as is.\n
This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.\n
If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.\n
The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Horticultural farming unless otherwise defined in this Privacy Policy.\n
        <b>Information Collection and Use</b>
For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.\n
The app does use third party services that may collect information used to identify you.\n
Link to privacy policy of third party service providers used by the app\n
•	Google Play Services\n
        <b>Log Data</b>\n
I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.\n
<b>Cookies</b>\n
Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your devices internal memory.\n
This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.\n
        <b>Service Providers</b> \n
I may employ third-party companies and individuals due to the following reasons:\n
•	To facilitate our Service;\n
•	To provide the Service on our behalf;\n
•	To perform Service-related services; or\n
•	To assist us in analyzing how our Service is used.\n
I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.\n
        <b>Security</b> \n
I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.\n
<b>Links to Other Sites</b>\n
This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.\n
<b>Children’s Privacy</b>\n
These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.\n
<b>Changes to This Privacy Policy</b>\n
I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.\n
<b>Contact Us</b>\n
If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at Cateiannjeri@gmail.com.

</string>
    <string name="apples_facts"><b>Quick facts</b> \n
        * Apple trees need at least 8 hours of sun per day during the growing season. \n
        * Two varieties are required for successful pollination; one can be a crabapple.\n
       *  Dwarf apple trees will start bearing fruit 2 to 3 years after planting. \n
        * Standard size trees can take up to 8 years to bear fruit.\n
        * Some varieties are more susceptible to insect and disease damage than others.\n
        * Prune annually to keep apple trees healthy and productive.</string>
</resources>