<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:textAlignment="center"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/enter_email"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/enter_password"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="8dp"
            android:text="@string/log_in_btn" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="250dp"
            android:text="@string/do_not_have_an_account"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_sign_up"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="250dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="LogIn"
            android:text="@string/txt_sign_up"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic" />

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>