<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_editProfile"
    tools:context=".EditProfileActivity">

    <ImageView
        android:id="@+id/profile_pic_iv"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:contentDescription="@string/profile_picture"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person_holo_blue_light_24dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic_iv">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@android:color/white"
            android:contentDescription="@string/image_button"
            android:src="@drawable/ic_email_holo_blue_light_24dp" />

        <EditText
            android:id="@+id/username_et"
            android:layout_width="@dimen/dimen_256dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/enter_username"
            android:padding="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@android:color/white"
            android:contentDescription="@string/image_button"
            android:src="@drawable/ic_phone_android_holo_blue_light_24dp" />

        <EditText
            android:id="@+id/contact_et"
            android:layout_width="@dimen/dimen_256dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/enter_phone_number"
            android:padding="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="@dimen/dimen_256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />



</android.support.constraint.ConstraintLayout>