<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
        android:id="@+id/mainblogpost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ProfilePicImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person_holo_blue_light_24dp"
                app:civ_border_color="@android:color/holo_blue_dark"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toStartOf="@+id/desc"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/usename"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ProfilePicImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/date_of_the_post"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ProfilePicImage"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <ImageView
                android:id="@+id/desc"
                android:layout_width="379dp"
                android:layout_height="196dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/post_image"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ProfilePicImage"
                app:srcCompat="@android:drawable/picture_frame" />

            <ImageView
                android:id="@+id/likesIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
                android:contentDescription="@string/profile_picture"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_tv"
                app:srcCompat="@drawable/ic_favorite_grey_24dp"
                tools:clickable="true" />

            <TextView
                android:id="@+id/desc_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/comments_appear_here"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc"
                app:layout_constraintVertical_bias="0.12" />

            <TextView
                android:id="@+id/likesCount"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="28dp"
                android:text="@string/_0_likes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/likesIcon"
                app:layout_constraintTop_toBottomOf="@+id/desc_tv" />

            <ImageView
                android:id="@+id/comment"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/comments_appear_here"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="@+id/desc_tv"
                app:layout_constraintHorizontal_bias="0.373"
                app:layout_constraintStart_toEndOf="@+id/likesCount"
                app:layout_constraintTop_toBottomOf="@+id/desc_tv"
                app:srcCompat="@drawable/ic_insert_comment_grey_24dp"
                tools:clickable="true" />

            <TextView
                android:id="@+id/commentsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/comments"
                app:layout_constraintBottom_toBottomOf="@+id/comment"
                app:layout_constraintStart_toEndOf="@+id/comment" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>